@@ -1,3 +1,4 @@
+* Added company reactivate method to V2.
 * Fixed enterprise user create method.
 * Fixed enterprise user parameter name.
 * Adjusted V2 base parsing code to allow for parsing a different model in the returned json.
